; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/wpa_supplicant/extr_eapol_test.c_eapol_test_set_config_blob.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/wpa_supplicant/extr_eapol_test.c_eapol_test_set_config_blob.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wpa_config_blob = type { i32 }
%struct.eapol_test_data = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, %struct.wpa_config_blob*)* @eapol_test_set_config_blob to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @eapol_test_set_config_blob(i8* %0, %struct.wpa_config_blob* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca %struct.wpa_config_blob*, align 8
  %5 = alloca %struct.eapol_test_data*, align 8
  store i8* %0, i8** %3, align 8
  store %struct.wpa_config_blob* %1, %struct.wpa_config_blob** %4, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = bitcast i8* %6 to %struct.eapol_test_data*
  store %struct.eapol_test_data* %7, %struct.eapol_test_data** %5, align 8
  %8 = load %struct.eapol_test_data*, %struct.eapol_test_data** %5, align 8
  %9 = getelementptr inbounds %struct.eapol_test_data, %struct.eapol_test_data* %8, i32 0, i32 0
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load %struct.wpa_config_blob*, %struct.wpa_config_blob** %4, align 8
  %14 = call i32 @wpa_config_set_blob(i32 %12, %struct.wpa_config_blob* %13)
  ret void
}

declare dso_local i32 @wpa_config_set_blob(i32, %struct.wpa_config_blob*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
